[package]
name = "dht_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.3"
anyhow = "1.0.100"
